# Graphite

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/agents/: impl.md
.claude/skills/proc-macro-dev/: SKILL.md
crates/graphite/: Cargo.toml
crates/graphite-macros/: Cargo.toml
crates/graphite-macros/src/: flow_codegen.rs  flow_dsl.rs  instance_codegen.rs  instance_dsl.rs  lib.rs  naming.rs  schema_codegen.rs  schema_dsl.rs  schema_validate.rs
crates/graphite/src/: compute.rs  edge_view.rs  graph.rs  lib.rs  (+1 more)
docs/: bulk_construction.md  compute_graph.md  design_journal.html  design_principles.md  dev_history_2026-07-14_session1.md  dev_history_2026-07-14_session2.md  edge_endpoints_v4_1.md  edge_syntax_v2.md  edge_syntax_v3.md  edge_view_api.md  flow_macro.md  graph_literal_v3.md  graph_splice.md  ide_support_spec.md  modeling_guide.md  node_id_v4_2.md  phase5_candidates.md  reverse_query.md  schema_v4.md
examples/async-dag/: Cargo.toml  README.md
examples/build-pipeline/: Cargo.toml  README.md  pipeline.txt
examples/dialogue-engine/: Cargo.toml  README.md
examples/dialogue-engine/src/: engine.rs  lib.rs  main.rs  report.rs  schema.rs  validate.rs
examples/dialogue-engine/tests/: integration.rs
examples/hello-graph/: Cargo.toml  README.md
examples/hello-graph/src/: main.rs
examples/org-analyzer/: Cargo.toml  README.md
examples/reactive-cells/: Cargo.toml  README.md
examples/state-machine/: Cargo.toml  README.md
examples/state-machine/src/: fsm.rs  lib.rs  main.rs  schema.rs  validate.rs
examples/state-machine/tests/: integration.rs
(+74 files in other folders)
