[workspace]
# 空の [workspace] テーブルを置くことで、ルートの Cargo workspace から
# このクレートを独立させる (スタンドアロン example)。

[package]
name = "dialogue-engine"
version = "0.1.0"
edition = "2021"
description = "Graphite の graph_schema!/graph! を使った分岐ノベルゲームエンジンの実践example"

[dependencies]
graphite = { path = "../../crates/graphite" }
